--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,102 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
+}
+
+.container {
+    max-width: 1000px;
+    margin: auto;
+}
+
+header {
+    background-color: #48c5ce;
+    text-align: center;
+    color: white;
+    padding: 10px;
+    text-transform: uppercase;
+}
+
+.title {
+    font-size: 26px;
+}
+
+section {
+    padding: 20px;
+    background-image: url("../img/palestra.png");
+    background-size: cover;
+    overflow: hidden;
+}
+
+h2 {
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+.formContainer {
+    max-width: 230px;
+    background-color: #ffff2fbb;
+    padding: 20px;
+    float: right;
+}
+
+.mb {
+    margin-bottom: 15px;
+}
+
+input,
+select {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    color: white;
+    background-color: #48c5ce;
+    font-weight: bold;
+}
+
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: nome;
+    background-image: url("../img/arrow.jpg");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center;
+}
+
+footer {
+    background-color: #202121;
+    padding: 40px;
+    text-align: center;
+}
+
+.picture {
+    width: 130px;
+    background-color: black;
+
+}
+
+.description {
+    display: inline-block;
+    text-align: left;
+    color: white;
+    max-width: 40%;
+    margin-left: 40px;
+}
+
+.description p,
+.description h3 {
+    margin-bottom: 20px;
+}
+
+.description h3 {
+    font-size: 24px;
+}
